# yandex_cpp_course

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_runner.h
course1/: Database.h  Function.h  Incognizable.h  LectureTitle.h  Person.h  Rational.h  ReversibleString.h
course2/: Animal.h  ExpressionParser.h  Matrix.h  Rectangle.h  Region.h  TeamTasks.h  phone_number.cpp  phone_number.h  sum_reverse_sort.cpp  sum_reverse_sort.h
course2/BusManager/: bus_manager.cpp  bus_manager.h  query.cpp  query.h  responses.cpp  responses.h
course2/DataBase2/DataBase/: database.cpp  database.h
course2/DataBase2/Date/: date.cpp  date.h
course2/DataBase2/ExpParser/: LogicalOperation.h  Token.cpp  Token.h  comparison.h  condition_parser.cpp  condition_parser.h
course2/DataBase2/Nodes/: node.h
course2/DataBase2/Nodes/DateComparisonNode/: DateComparisonNode.cpp  DateComparisonNode.h
course2/DataBase2/Nodes/EmptyNode/: EmptyNode.cpp  EmptyNode.h
course2/DataBase2/Nodes/EventComparisonNode/: EventComparisonNode.cpp  (+1 more)
course2/INotifier/: INotifier.h
course2/PersonPlaces/: Person.cpp  Person.h  Policeman.cpp  Policeman.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
course3/final/: search_server.cpp  search_server.h
course3/week1/: Paginator.h  airline_ticket.h
course3/week2/: HotelsBooking.h  ReadingManager.h
course3/week3/: LinkedList.h  ObjectPool.h  SimpleVector.h
course3/week4/: AirportCounter.h  Editor.h  StackVector.h  Translator.h  http_request.h  stats.cpp  stats.h
course3/week5/: simple_vector.h
utils/: LogDuration.h  Logger.h
(+2 files in other folders)
